--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 
 header {
-    background-color: black; /* Boja pozadine header-a */
+    background-color: black; 
     color: #ede9e9; 
     display: flex;
     justify-content: space-between;
@@ -73,7 +73,7 @@ nav {
 
 .subtitle {
     font-size: 50px; 
-    margin-top: 80px; /*Razmak izmedju vrha*/
+    margin-top: 80px; 
     text-align: center;
     font-family:'Pacifico', cursive;
 }
@@ -124,7 +124,7 @@ nav {
   background: #f6f4ff;
   border-radius: 12px;
   cursor: pointer;
-  /* margin-left: -6rem; */
+ 
 }
 
 /* reset */
@@ -327,15 +327,15 @@ img {
 }
 
 .destination-card {
-    display: flex; /* Koristite fleksibilni model za postavljanje elemenata u isti red */
+    display: flex; 
 }
 
 .image-container {
-    margin-right: 20px; /* Dodajte desni margin između slika (po potrebi) */
+    margin-right: 20px; 
 }
 
 .cijena1, .cijena2, .cijena3 {
-    flex: 1; /* Rastegnite opise kako bi zauzeli preostali prostor */
+    flex: 1; 
 }
 
 .cijena1, .cijena2, .cijena3, .cijena4 { 
@@ -414,7 +414,7 @@ img {
 
 
 .spacer {
-    margin: 0 40px; /* Dodajte horizontalni razmak od 40 piksela između elemenata */
+    margin: 0 40px; 
 }
 
 
@@ -454,22 +454,22 @@ img {
 }
 
 .custom-box {
-    width: 569px; /* Postavite širinu kutije na 569 piksela */
-    height: 330px; /* Postavite visinu kutije na 330 piksela */
-    border: 2px solid #000; /* Dodajte okvir oko kutije */
-    padding: 10px; /* Dodajte unutarnje polje oko teksta */
-    background-color: #f0f0f0; /* Postavite pozadinu kutije */
+    width: 569px; 
+    height: 330px; 
+    border: 2px solid #000; 
+    padding: 10px; 
+    background-color: #f0f0f0; 
 }
 
 
 .pink-background {
     
-        background-color: rgb(244, 187, 140); /* Postavite boju pozadine na roza */
+        background-color: rgb(244, 187, 140); 
         
-        background-size: cover; /* Skalira sliku da pokrije celu površinu */
-        background-position: center; /* Centrira sliku */
-        width: 100%; /* Postavite širinu na 100% širine viewporta */
-        height: 450px; /* Postavite visinu prema vašim potrebama */
+        background-size: cover; 
+        background-position: center; 
+        width: 100%; 
+        height: 450px; /
         margin-top:300px;
     }
     
@@ -504,9 +504,9 @@ img {
 
 .dugme2 {
     width: 212px; 
-    height: 47px; /* Postavite visinu boksa prema vašim potrebama */
-    background-color: orange; /* Postavite boju pozadine na narandžastu */
-    border-radius: 10px; /* Postavite radijus zaobljenih ivica */
+    height: 47px; 
+    background-color: orange; 
+    border-radius: 10px; 
     display: flex;
     justify-content: center;
     align-items: center;
